# crossPlatform-sysInfo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: sysinfo.hpp
src/: sysinfo.cpp
src/linux/: sysinfo_linux.cpp  sysinfo_linux.hpp
src/windows/: sysinfo_windows.cpp  sysinfo_windows.hpp
